# CosmWasm-NFT-Staking

./: Cargo.toml  README.md
artifacts/: checksums.txt  nft_staking.wasm
examples/: schema.rs
schema/: nft_staking.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_admin_address.json  response_to_stakings_by_address.json  response_to_whitelisted_nft_addresses.json
src/: contract.rs  error.rs  msg.rs  state.rs
ts/: interaction.ts
