[package]
name = "nft_staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std    = "1.1.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.0"
cw721           = { version = "0.18.0"}
cw721-base      = { version = "0.18.0", features = ["library"] }
thiserror = "1.0.58"
